feat : publish to GitHub packages  (#2)
* feat: harden CI, publish to GitHub Packages, fix integration tests (#1)

CI:
- Add GitHub Packages publish job for Maven modules and Gradle plugin
- Add dedicated integration-test job (Java 17, 60-min timeout)
- Switch to temurin distribution and hashFiles-based cache keys
- Bump GitHub Actions to Node.js 24 compatible versions (checkout@v6, setup-java@v5, cache@v5)
- Add branch protection ruleset

Build:
- Move integration-tests into -Pintegration-tests profile (out of default reactor)
- Use gradlew-smart in gradle-plugin exec steps; chmod all wrapper scripts
- Fix spotless:apply → spotless:check in quality profile
- Add java8-api-check profile to catch Java 11+ API usage at compile time

Core:
- Extract ParserUtils.extractFirstLine() and BuildSummary.computePercentiles()
- Consolidate mode preset logic in BuildOutputSpy.emitSummary()
- Fix BuildOutputSpy.getProperty() to check session.getUserProperties() so Maven
-D flags override plugin XML config (CI-only failure root cause)
- Fix redirectTestOutputToFile: set as both user and system property; hardcode
in test project surefire config since Maven's expression evaluator reads
session.getSystemProperties() frozen at startup
- Switch recentChanges from git diff to git log for clean CI checkouts

Deps: jackson-databind 2.21.1→2.21.2, maven-core 3.9.4→3.9.14, exec-maven-plugin 3.5.0→3.6.3

Docs: rewrite development-guide, document Maven property resolution order,
add Gradle property handling section, sync README with current output format

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

* refactor: rename modules and artifacts for consistent naming convention

Rename all modules and artifacts from the old inconsistent naming scheme
(llm-compactor-maven-plugin, gradle-plugin, maven-extension, test-project)
to a consistent io.github.sfkamath groupId with descriptive artifact IDs:
- llm-compactor-maven-plugin  → llm-build-compactor-maven-plugin
- gradle-plugin         