@@ -6,11 +6,13 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
 
@@ -80,7 +82,8 @@ class SummaryWriterTest {
     assertThat(SummaryWriter.cleanTestLogLine("SLF4J: No providers found")).isNull();
 
     // Timestamps should be stripped
-    assertThat(SummaryWriter.cleanTestLogLine("12:34:56.789 Test message")).isEqualTo("Test message");
+    assertThat(SummaryWriter.cleanTestLogLine("12:34:56.789 Test message"))
+        .isEqualTo("Test message");
 
     // Thread info should be stripped
     assertThat(SummaryWriter.cleanTestLogLine("12:34:56.789 [main] Test message"))
@@ -91,7 +94,8 @@ class SummaryWriterTest {
         .isEqualTo("Test message");
 
     // Logger names should be stripped
-    assertThat(SummaryWriter.cleanTestLogLine("12:34:56.789 [main] INFO  c.e.MyClass - Test message"))
+    assertThat(
+            SummaryWriter.cleanTestLogLine("12:34:56.789 [main] INFO  c.e.MyClass - Test message"))
         .isEqualTo("Test message");
 
     // SLF4J prefix in message content is kept (only standalone SLF4J lines filtered)
@@ -103,14 +107,15 @@ class SummaryWriterTest {
 
   @Test
   void shouldFilterTestDurationInJson() {
+    Map<String, Double> percentiles = new HashMap<>();
     BuildSummary summary =
         new BuildSummary(
             "FAILED",
             10,
             2,
             Arrays.asList(
-                new BuildError("SlowTest", "Test.java", 1, "msg", "stack", 200.0),
-                new BuildError("FastTest", "Test2.java", 1, "msg", "stack", 50.0)),
+                new BuildError("SlowTest", "Test.java", 1, "msg", "stack", 200.0, null),
+                new BuildError("FastTest", "Test2.java", 1, "msg", "stack", 50.0, null)),
             Collections.emptyList(),
             Collections.emptyList());
 
@@ -128,8 +133,8 @@ class SummaryWriterTest {
             10,
             2,
             Arrays.asList(
-                new BuildError("SlowTest", "Test.java", 1, "msg", "stack", 200.0),
-                new BuildError("FastTest", "Test2.java", 1, "msg", "stack", 50.0)),
+                new BuildError("SlowTest", "Test.java", 1, "msg", "stack", 200.0, null),
+                new BuildError("FastTest", "Test2.java", 1, "msg", "stack", 50.0, null)),
             Collections.emptyList(),
             Collections.emptyList());
 
@@ -141,12 +146,18 @@ class SummaryWriterTest {
   @Test
   void shouldWriteToFile() throws IOException {
     BuildSummary summary =
-        new BuildSummary("SUCCESS", 5, 0, Collections.emptyList(), Collections.emptyList(), Collections.emptyList());
+        new BuildSummary(
+            "SUCCESS",
+            5,
+            0,
+            Collections.emptyList(),
+            Collections.emptyList(),
+            Collections.emptyList());
     Path path = tempDir.resolve("summary.json");
 
     SummaryWriter.write(summary, path);
 
-    String content = Files.readString(path);
+    String content = new String(Files.readAllBytes(path));
     assertThat(content).contains("\"status\" : \"SUCCESS\"");
   }
 
@@ -159,7 +170,14 @@ class SummaryWriterTest {
 
     BuildSummary summary =
         new BuildSummary(
-            "SUCCESS", 10, 0, Collections.emptyList(), Collections.emptyList(), Collections.emptyList(), null, percentiles);
+            "SUCCESS",
+            10,
+            0,
+            Collections.emptyList(),
+            Collections.emptyList(),
+            Collections.emptyList(),
+            null,
+            percentiles);
 
     String json = SummaryWriter.toJson(summary);
     assertThat(json).contains("\"p50\" : 100.0");
@@ -171,7 +189,14 @@ class SummaryWriterTest {
   void shouldIncludeBuildDuration() {
     BuildSummary summary =
         new BuildSummary(
-            "SUCCESS", 10, 0, Collections.emptyList(), Collections.emptyList(), Collections.emptyList(), 5000L, null);
+            "SUCCESS",
+            10,
+            0,
+            Collections.emptyList(),
+            Collections.emptyList(),
+            Collections.emptyList(),
+            5000L,
+            null);
 
     String json = SummaryWriter.toJson(summary);
     assertThat(json).contains("\"totalBuildDurationMs\" : 5000");
@@ -193,19 +218,28 @@ class SummaryWriterTest {
     // Without message, no stripping occurs
     assertThat(SummaryWriter.stripExceptionPackage("java.lang.NullPointerException"))
         .isEqualTo("java.lang.NullPointerException");
-    assertThat(SummaryWriter.stripExceptionPackage("Simple message"))
-        .isEqualTo("Simple message");
+    assertThat(SummaryWriter.stripExceptionPackage("Simple message")).isEqualTo("Simple message");
     assertThat(SummaryWriter.stripExceptionPackage(null)).isNull();
     assertThat(SummaryWriter.stripExceptionPackage("")).isEqualTo("");
   }
 
   @Test
   void shouldCondenseLongMessages() {
-    String longMessage = "A".repeat(1000);
-    String condensed = SummaryWriter.toJson(
-        new BuildSummary("FAILED", 0, 1,
-            Collections.singletonList(new BuildError("Error", "File.java", 1, longMessage, "stack")),
-            Collections.emptyList(), Collections.emptyList()));
+    StringBuilder sb = new StringBuilder();
+    for (int i = 0; i < 1000; i++) {
+      sb.append('A');
+    }
+    String longMessage = sb.toString();
+    String condensed =
+        SummaryWriter.toJson(
+            new BuildSummary(
+                "FAILED",
+                0,
+                1,
+                Collections.singletonList(
+                    new BuildError("Error", "File.java", 1, longMessage, "stack")),
+                Collections.emptyList(),
+                Collections.emptyList()));
     // Long messages are included in JSON
     assertThat(condensed).contains("File.java");
     assertThat(condensed).contains("AAAAAAAAAA");
@@ -222,9 +256,10 @@ class SummaryWriterTest {
 
   @Test
   void shouldProcessTestLogs() {
-    String logs = "12:34:56.789 [main] INFO  Test - Message 1\n"
-        + "SLF4J: Noise\n"
-        + "12:34:56.790 [main] INFO  Test - Message 2";
+    String logs =
+        "12:34:56.789 [main] INFO  Test - Message 1\n"
+            + "SLF4J: Noise\n"
+            + "12:34:56.790 [main] INFO  Test - Message 2";
 
     BuildError error = new BuildError("Type", "File.java", 1, "Msg", "Stack", 0.0, logs);
     List<String> logsArray = error.getTestLogsAsArray();
@@ -235,12 +270,18 @@ class SummaryWriterTest {
 
   @Test
   void shouldHandleWriteIOException() {
-    BuildSummary summary = new BuildSummary("SUCCESS", 0, 0, Collections.emptyList(), Collections.emptyList(), Collections.emptyList());
+    BuildSummary summary =
+        new BuildSummary(
+            "SUCCESS",
+            0,
+            0,
+            Collections.emptyList(),
+            Collections.emptyList(),
+            Collections.emptyList());
     // Try to write to root directory (should fail with permission denied or similar)
-    Path invalidPath = java.nio.file.Paths.get("/root/summary.json");
+    Path invalidPath = Paths.get("/root/summary.json");
 
-    org.junit.jupiter.api.Assertions.assertThrows(
-        RuntimeException.class,
-        () -> SummaryWriter.write(summary, invalidPath));
+    Assertions.assertThrows(
+        RuntimeException.class, () -> SummaryWriter.write(summary, invalidPath));
   }
 }
